--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "proshop-v2",
-  "version": "1.0.0",
-  "description": "eCommerce application built with mern stack",
+  "name": "proshop2",
+  "version": "2.0.0",
   "type": "module",
+  "description": "Ecommerce application built with the MERN stack",
   "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
